@@ -1,4 +1,4 @@
-.TH HDPARM 8 "August 2009" "Version 9.25"
+.TH HDPARM 8 "August 2009" "Version 9.26"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
